Bug 12590 - ranlib doesn't work with "-t" option
Summary: ranlib doesn't work with "-t" option
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: binutils (show other bugs)
Version: 2.22
: P2 normal
Target Milestone: ---
Assignee: Alan Modra
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-17 09:02 UTC by Hiromasa YOSHIMOTO
Modified: 2011-03-17 13:00 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hiromasa YOSHIMOTO 2011-03-17 09:02:56 UTC
ranlib 2.21.51.20110317 doesn't work with "-t" option. 

For example, 

$ ./ranlib -t
./ranlib: '-t': No such file

$ ./ranlib -t dummy.a
./ranlib: '-t': No such file

This seems to be regression, which was introduced in src/binutils/ar.c revision 1.70
Comment 1 Sourceware Commits 2011-03-17 12:56:42 UTC
CVSROOT:	/cvs/src
Module name:	src
Changes by:	amodra@sourceware.org	2011-03-17 12:56:36

Modified files:
	binutils       : ChangeLog ar.c 

Log message:
	PR 12590
	* ar.c (ranlib_main): Init arg_index properly.
	(usage): Describe --target.

Patches:
http://sourceware.org/cgi-bin/cvsweb.cgi/src/binutils/ChangeLog.diff?cvsroot=src&r1=1.1753&r2=1.1754
http://sourceware.org/cgi-bin/cvsweb.cgi/src/binutils/ar.c.diff?cvsroot=src&r1=1.72&r2=1.73
Comment 2 Alan Modra 2011-03-17 13:00:27 UTC
Fixed.  Rev 1.70 was not applied to the branch.