	PR 12590 	* ar.c (ranlib_main): Init arg_index properly. 	(usage): Describe --target.